--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-numpy>=1.13.0
-pandas>=0.20.2
+numpy>=1.11.3
+pandas>=0.20.1
 slacker>=0.9.50
-scipy>=0.19.1
-feedparser>=5.2.1
+scipy>=0.19.0
 beautifulsoup4>=4.6.0
-scikit_learn>=0.18.2
+scikit_learn>=0.18.1
 SQLAlchemy>=1.1.11
-flask>=0.12.2
+Flask>=0.12.2
 apscheduler>=3.3.1
+gnewsclient>=1.0.2
+newspaper3k>=0.2.2
